--- a/EMSES_BEM/Makefile
+++ b/EMSES_BEM/Makefile
@@ -9,14 +9,16 @@ F_LIBS=-lctca_f -lctca_mod -qmkl
 
 COUPDIR=coupler
 WORKDIR=worker
+REQDIR=requester
 BINDIR=bin
 
-PROGS = $(COUPDIR)/coupler $(WORKDIR)/worker
+REQPROG=$(REQDIR)/mpiemses3D
+
+PROGS = $(COUPDIR)/coupler $(WORKDIR)/worker $(REQPROG)
+
+.PHONY: all clean requester
 
 all: $(PROGS)
-
-# requester: $(REQDIR)/requester.f90
-# 	$(FC) $(FFLAGS) $(LDFLAGS) requester.f90 $(F_LIBS) $(LIBS) -o requester
 
 $(COUPDIR)/coupler: $(COUPDIR)/coupler.f90
 	$(FC) $(FFLAGS) $(LDFLAGS) $(COUPDIR)/coupler.f90 $(F_LIBS) $(LIBS) -o $(COUPDIR)/coupler
@@ -24,5 +26,11 @@ $(COUPDIR)/coupler: $(COUPDIR)/coupler.f90
 $(WORKDIR)/worker: $(WORKDIR)/worker.f90
 	$(FC) $(FFLAGS) $(LDFLAGS) $(WORKDIR)/worker.f90 $(F_LIBS) $(LIBS) -o $(WORKDIR)/worker
 
+$(REQPROG):
+	$(MAKE) -C $(REQDIR)
+
+requester: $(REQPROG)
+
 clean:
-	/bin/rm -f *.o *.mod ${PROGS}
+	/bin/rm -f *.o *.mod $(COUPDIR)/coupler $(WORKDIR)/worker
+	$(MAKE) -C $(REQDIR) clean || true
